--- a/Arbol_De_Amor-main/index.html
+++ b/Arbol_De_Amor-main/index.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Zero - Código libre no comercial" />
     <meta
       name="description"
-      content="Para Anee — 44.640 minutos contigo: Una carta escrita desde el corazón para Anee. Un mes, miles de emociones y la certeza de querer caminar juntos, de la mano, sin imaginar un final distinto."
+      content="Una carta escrita desde el corazón para Anee. Un mes, miles de emociones y la certeza de querer caminar juntos, de la mano, sin imaginar un final distinto."
     />
     <meta
       name="keywords"
