--- a/Arbol_De_Amor-main/index.html
+++ b/Arbol_De_Amor-main/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Para Anee — 44.640 minutos contigo.</title>
+    <title>Para Anee — 44.640 minutos contigo</title>
     <!-- Autoría y derechos -->
     <meta name="author" content="Zero" />
     <meta name="copyright" content="Zero - Código libre no comercial" />
